@@ -15,12 +15,6 @@
 	<name>cursomc</name>
 	<description>Demo project for Spring Boot</description>
 
-	<properties>
-		<java.version>11</java.version>
-		<maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
-
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -84,11 +78,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
 				<configuration>
-					<release>11</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<source>11</source>
+					<target>11</target>
 				</configuration>
+
 			</plugin>
 			<!-- This is just to make sure the class is set as main class to execute 
 				from the jar -->
